if(${MY_CMAKE_SIZEOF_VOID_P} GREATER 4)
    add_subdirectory("A2lParser")
    add_subdirectory("CanDataBase")
    add_subdirectory("Equations")
    add_subdirectory("IniFileDataBase")
    add_subdirectory("RemoteMaster")
    add_subdirectory("Scheduler")
    add_subdirectory("StimulusPlayer")
    add_subdirectory("Blackboard")
    add_subdirectory("CanServer")
    add_subdirectory("DebugInfos")
    add_subdirectory("GUI")
    add_subdirectory("Ramps")
    add_subdirectory("RpcInterface")
    add_subdirectory("Script")
    add_subdirectory("TraceRecorder")
    add_subdirectory("XcpOverEthernet")
endif()
add_subdirectory("Global")
add_subdirectory("Utilities")
add_subdirectory("ExternalProcess")
