if((BUILD_WITH_FMU2_SUPPORT OR BUILD_WITH_FMU3_SUPPORT) AND NOT BUILD_ONLY_EXAMPLES)
    message("FMU2 or FMU3 support")
    if(${MY_CMAKE_SIZEOF_VOID_P} GREATER 4)
        add_subdirectory("ExtProc_FMUExtract")
    endif()
    if(BUILD_WITH_FMU2_SUPPORT)
        message("FMU2 support")
        add_subdirectory("ExtProc_FMU2Loader")
    endif()
    if(BUILD_WITH_FMU3_SUPPORT)
        message("FMU3 support")
        add_subdirectory("ExtProc_FMU3Loader")
    endif()
else()
    message("no FMU2 and FMU3 support")
endif()

if(BUILD_EXAMPLES)
    if(${MY_CMAKE_SIZEOF_VOID_P} GREATER 4)
        set(SampleOutputFolder Samples64)
    else()
        set(SampleOutputFolder Samples32)
    endif()
    message("Example install folder")
    message(${SampleOutputFolder})
    add_subdirectory("ExtProc_Simple")
    add_subdirectory("ExtProc_VehicleModel")
    add_subdirectory("ExtProc_TransmitionModel")
    add_subdirectory("ExtProc_TransmitionControlUnit")
    add_subdirectory("ExtProc_ElectricMotorModel")
    add_subdirectory("ExtProc_ElectricMotorControlUnit")
    add_subdirectory("ExtProc_BatteryModel")
    add_subdirectory("ExtProc_BatteryControlUnit")
    if(BUILD_ESMINI_EXAMPLE)
        add_subdirectory("ExtProc_OpenScenario")
    endif()
endif()
